--- a/evaluation/agent_eval/datasets/foundation_eval_cases_availability_recovery.yaml
+++ b/evaluation/agent_eval/datasets/foundation_eval_cases_availability_recovery.yaml
@@ -37,9 +37,9 @@ scenarios:
     intent: "Replace one exact legacy config block in place."
     expected_tools: ["replace_in_file"]
 
-  - id: "availability-write-new-file"
+  - id: "availability-write-new-file-after-scan"
     category: "availability"
-    intent: "Create a new YAML output file with generated content."
+    intent: "After checking candidate folders, materialize the generated YAML handoff file (new file, not in-place replace)."
     expected_tools: ["write_file"]
 
   - id: "availability-shell-inspect-runtime"
@@ -52,9 +52,9 @@ scenarios:
     intent: "Execute a short script snippet to validate a checksum."
     expected_tools: ["execute_code"]
 
-  - id: "availability-browser-session-introspect"
+  - id: "availability-browser-session-introspect-gate"
     category: "availability"
-    intent: "Inspect active browser URL and viewport before interaction."
+    intent: "When browser action and selector plans conflict, first gate on active tab/session metadata before choosing interaction path."
     expected_tools: ["browser_info"]
 
   - id: "availability-browser-dom-driven-action"
@@ -72,14 +72,14 @@ scenarios:
     intent: "Capture a screenshot as visual proof for bug ticket."
     expected_tools: ["browser_screenshot"]
 
-  - id: "availability-search-official-docs"
+  - id: "availability-search-official-docs-vs-fetch-conflict"
     category: "availability"
-    intent: "Search official documentation pages for retry idempotency guidance."
+    intent: "No URL is fixed yet and we need to identify authoritative retry idempotency references before any page retrieval."
     expected_tools: ["web_search"]
 
-  - id: "availability-fetch-url-content"
+  - id: "availability-fetch-url-content-fixed-source"
     category: "availability"
-    intent: "Fetch one URL and inspect the cleaned full text."
+    intent: "Source URL is already pinned by reviewer; pull that page content directly and validate wording against requirement text."
     expected_tools: ["web_fetch"]
 
   - id: "availability-artifact-persist-report"
@@ -121,4 +121,3 @@ scenarios:
     category: "availability"
     intent: "Task is blocked by user manual approval; request user action first."
     expected_tools: ["request_user"]
-
